design: fix font in popups readability

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -994,29 +994,30 @@ ul.actions {
         }
 
         .work-point {
-          font-weight: bold;
-          font-size: 0.8em;
           line-height: 1;
           font-family: "Roboto", sans-serif;
-          margin: 5px 0;
-          margin-top: 10px;
+          font-family: "Source Sans Pro", sans-serif;
+          font-weight: 300;
+          font-size: 20pt;
+          margin-top: 0.2em;
         }
 
         .work-period {
-          font-weight: bold;
-          font-size: 0.75em;
-          line-height: 1em;
+          line-height: 1;
           font-family: "Roboto", sans-serif;
-          padding-top: 10px;
+          font-family: "Source Sans Pro", sans-serif;
+          font-weight: 300;
+          font-size: 20pt;
+          margin-top: 0.2em;
         }
 
         .work-period-title {
-          margin: 0;
-          line-height: 2em;
-          font-size: 2em;
-          font-family: "Playfair Display";
+          font-size: 1.8em;
+          font-family: "Source Sans Pro", sans-serif;
           letter-spacing: 5px;
           white-space: nowrap;
+          font-weight: 400;
+          margin-bottom: 0.3em;
         }
 
         .work-video-container {
@@ -1066,12 +1067,12 @@ ul.actions {
           display: flex;
           flex-direction: column;
           align-items: baseline;
-          min-width: 300px;
+          min-width: 350px;
           max-width: 1400px;
           margin-top: 50px;
           flex-shrink: 1;
           flex-grow: 100;
-          flex-basis: 300px;
+          flex-basis: 350px;
 
           &:first-child {
             margin-right: 50px;
@@ -1085,10 +1086,12 @@ ul.actions {
           }
 
           .work-subtitle {
-            font-size: 2em;
-            font-family: "Playfair Display";
+            font-size: 1.8em;
+            font-family: "Source Sans Pro", sans-serif;
             letter-spacing: 5px;
             white-space: nowrap;
+            font-weight: 400;
+            margin: 0.3em 0;
           }
 
           .work-image {
